# Spaceship

./: .gitignore  CMakeLists.txt  main.cpp
Application/: CMakeLists.txt
Application/include/: Application.h
Application/sources/: Application.cpp
Components/: CMakeLists.txt
Components/include/: HealthComponent.h  ScoreComponent.h
Components/sources/: HealthComponent.cpp  ScoreComponent.cpp
GameProcess/: CMakeLists.txt
GameProcess/include/: Asteroid.h  Bullet.h  DangerZone.h  DrawableObject.h  HealthComponent.h  MovableObject.h  Spaceship.h  Turret.h
GameProcess/sources/: Asteroid.cpp  Bullet.cpp  DangerZone.cpp  HealthComponent.cpp  MovableObject.cpp  Spaceship.cpp  Turret.cpp
Level/: CMakeLists.txt
Level/include/: Level.h
Level/sources/: Level.cpp
UI/: CMakeLists.txt
UI/include/: GameEndedUI.h  InGameUI.h  MainMenuUI.h  UI.h
UI/sources/: GameEndedUI.cpp  InGameUI.cpp  MainMenuUI.cpp
